# libs

./: .gitignore  README.md  TODO.md
arcadia_ui_core/: AUDIT-CODE.md  README.md  pyproject.toml
arcadia_ui_core/arcadia_ui_core/: CODER-JOURNAL.md  __init__.py  contextmenu.py  router.py  theme.py
arcadia_ui_style/: AUDIT-CODE.md  CODER-JOURNAL.md  KNOWN_ISSUES.md  README.md  TO_INVESTIGATE_FURTHER.md  pyproject.toml
arcadia_ui_style/arcadia_ui_style/: __init__.py  templates.py  templates_v2.py  theme.py
arcadia_ui_style/arcadia_ui_style/static/: active-profile.js  arcadia_theme.css  command-palette.js  contextmenu.js  modal.js  shortcuts.js  theme-selector.js  toast.js
auth/: AUDIT-CODE.md  CODER-JOURNAL.md  README.md  pyproject.toml
auth/arcadia_auth/: README.md  __init__.py  auth_utils.py  middleware.py  models.py  policy.py  repo.py  router.py  schemas.py  security.py  sqlite_repo.py
auth/arcadia_auth/adapters/: __init__.py  sqlalchemy_repo.py
cli_loop/: README.md  __init__.py  cli_loop.py  pyproject.toml
cli_loop/cli_loop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
command_router/: README.md  __init__.py  command_router.py  pyproject.toml
fastapi_sse/: README.md  fastapi_sse.py  pyproject.toml  test_sse.py
openrouter/: README.md  __init__.py  openrouter.py  pyproject.toml  test_build_messages.py  test_whisper.py  whisper.py
openrouter/openrouter/: __init__.py  models.py  models_sqlite.py  openrouter.py  whisper.py
openrouter/openrouter.egg-info/: PKG-INFO  SOURCES.txt
telegram/: __init__.py  pyproject.toml  telegram.py
telegram_bot/: __init__.py  pyproject.toml  telegram_bot.py
telegram_mini/: README.md  __init__.py  example_inline_buttons.py  pyproject.toml  telegram_mini.py  test_new_features.py
telegram_mini/telegram_mini.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_app/: Makefile  README.md  main.py  pyproject.toml  run.sh
test_app/static/: arcadia.css  arcadia_theme.css
test_app/templates/: _auth.html  _content_wrapper.html  _footer.html  _header.html  _layout.html  _settings.html  _user_menu.html  account_main.html  index.html  index_main.html  login.html  profile.html  profile_main.html  settings.html  settings_main.html  shortcuts_main.html  signup.html
web_upload/: README.md  __init__.py  pyproject.toml  test_web_upload.py  web_upload.py
workspace_fs/: README.md  __init__.py  pyproject.toml  test_workspace_fs.py  workspace_fs.py
