[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-loop"
version = "0.1.0"
description = "Zero-dep micro CLI loop engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Home = "https://github.com/agheieff/cli-loop"

[tool.setuptools]
py-modules = ["cli_loop"]
