[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "command-router"
version = "0.1.0"
description = "Zero-dep micro CLI loop engine"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/agheieff/libs/command-router"
