[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-sse-mini"
version = "0.1.0"
description = "Tiny helpers to stream OpenRouter chunks as SSE lines"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["fastapi_sse"]
