[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter"
version = "0.1.0"
description = "OpenRouter client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.25"]

[project.urls]
Homepage = "https://github.com/yourname/my-dev-utils"
