[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter"
version = "0.1.0"
description = "OpenRouter client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx>=0.20.0"]

[project.urls]
Homepage = "https://github.com/agheieff/libs/openrouter"
