[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram"
version = "0.1.0"
description = "Router-based Telegram bot micro-library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "command-router>=0.1.0",
    "python-telegram-bot>=20.0",
]

[project.urls]
Home = "https://github.com/agheieff/libs/telegram"
