[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram_mini"
version = "0.1.0"
description = "Router-based Telegram bot micro-library"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/agheieff/libs/telegram_mini"
